--- a/app/src/main/res/layout/actividad_ingreso.xml
+++ b/app/src/main/res/layout/actividad_ingreso.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0B0B0B"
+    android:id="@+id/frmIngreso"
     tools:context=".actividad.ActividadIngreso">
 
     <LinearLayout
