--- a/app/src/main/res/layout/fragmento_categoria.xml
+++ b/app/src/main/res/layout/fragmento_categoria.xml
@@ -67,11 +67,23 @@
                 android:text="Habilitado"
                 android:textColor="#FBFCF8"
                 android:textSize="16sp" />
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="3dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Codigo:"
+                android:textColor="#FBFCF8"
+                android:textSize="16sp" />
 
-            <Space
+            <TextView
+                android:id="@+id/lblCodcat"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textColor="#FBFCF8"
+                android:textSize="16sp" />
+
         </LinearLayout>
 
         <LinearLayout
