--- a/app/src/main/res/layout/fragmento_categoria.xml
+++ b/app/src/main/res/layout/fragmento_categoria.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:backgroundTint="#282A2C">
+    android:backgroundTint="#0B0B0B">
 
 
     <LinearLayout
@@ -37,13 +37,11 @@
         </LinearLayout>
 
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:orientation="horizontal">
-        </LinearLayout>
+            android:orientation="horizontal"></LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,6 +65,7 @@
                 android:text="Habilitado"
                 android:textColor="#FBFCF8"
                 android:textSize="16sp" />
+
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="3dp"
@@ -129,8 +128,8 @@
         android:paddingTop="16dp"
         android:text="Mantenimiento Categoria"
         android:textAlignment="center"
-        android:textSize="20sp"
         android:textColor="#FBFCF8"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
