--- a/app/src/main/res/layout/fragmento_cliente.xml
+++ b/app/src/main/res/layout/fragmento_cliente.xml
@@ -6,15 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:backgroundTint="#282A2C">
+    android:backgroundTint="#0B0B0B">
 
 
     <LinearLayout
+        android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="65dp"
         android:orientation="vertical"
-        android:id="@+id/linearLayout4"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
@@ -276,6 +276,7 @@
                 android:text="Habilitado"
                 android:textColor="#FBFCF8"
                 android:textSize="16sp" />
+
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="3dp"
@@ -330,6 +331,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
+
     <TextView
         android:id="@+id/textView6"
         android:layout_width="0dp"
@@ -337,8 +339,8 @@
         android:paddingTop="16dp"
         android:text="Mantenimiento Cliente"
         android:textAlignment="center"
-        android:textSize="20sp"
         android:textColor="#FBFCF8"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
