--- a/app/src/main/res/layout/fragmento_submenu.xml
+++ b/app/src/main/res/layout/fragmento_submenu.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:backgroundTint="#282A2C">
+    android:backgroundTint="#0B0B0B">
 
 
     <LinearLayout
@@ -42,6 +42,7 @@
             android:layout_marginTop="5dp"
             android:background="#282A2C"
             android:orientation="horizontal">
+
             <EditText
                 android:id="@+id/txtUrlsme"
                 android:layout_width="wrap_content"
@@ -91,6 +92,7 @@
                 android:text="Habilitado"
                 android:textColor="#FBFCF8"
                 android:textSize="16sp" />
+
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="3dp"
@@ -152,8 +154,8 @@
         android:paddingTop="16dp"
         android:text="Mantenimiento Submenu"
         android:textAlignment="center"
-        android:textSize="20sp"
         android:textColor="#FBFCF8"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
